stopped overlapping department and objective display in schedule grid

--- a/frontend/src/containers/schedule/schedule.styles.scss
+++ b/frontend/src/containers/schedule/schedule.styles.scss
@@ -94,6 +94,7 @@
 .grid-text{
     line-height: 0;
     font-size: 14px;
+    white-space: nowrap;
   
     @media only screen and (max-width: 570px) {
         font-size: 11px;
